deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rf2vc
  namespace: rf2vc-system
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: rf2vc-tls
  labels:
    app: rf2vc
spec:
  selector:
    app: rf2vc
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
    - name: api
      port: 8444
      targetPort: api
      protocol: TCP
